- TW-1334 task mod description:"word1 word2" fails to handle space (thanks to
          Benjamin Weber).
- TW-1336 Project attribute does not allow whitespace (thanks to Benjamin Weber).
- TW-1341 confirmation config setting should apply to config command as well
          (thanks to Charles Ulrich).
- TW-1345 taskrc.5 manpage errors.
- TW-1359 "one-two-three" in description triggers Malformed ID error.
- TW-1360 color.until directive missing.
- TW-1361 Strange results with complex filter (thanks to Jim B).
- TW-1366 In diagnostics it's called 'Cert', and in config it's called
          'certificate' (thanks to Jack).
- TW-1373 taskrc.vim VIM syntax file updated (thanks to lolilolicon).
- TW-1377 Tags in default.command are treated as "operator text".
- TW-1381 blocking report exits with "Unknown error" and exit code 3.
- TW-1383 Segmentation fault running import-yaml.pl with included example
          (thanks to Markus Beppler).
- TW-1400 task "" gives a segfault (thanks to Scott Kostyshak).
- TW-1403 fish shell: no option "modify" after task selection (thanks to Roman
          Infliansksas).
- TW-1405 Add command _zshattributes (thanks to Roman Inflianskas).
- TW-1407 'task calendar 2014' leaks.
- TW-1409 Allow "1 of N tasks remaining" to be correctly localized (thanks to
          Jeremy John Reeder).
- Removed deprecated 'echo.command' setting, in favor of the 'header' and
  'affected' verbosity tokens.
- Removed deprecated 'edit.verbose' setting, in favor of the 'edit' verbosity
  token.
- Includes utility 'calc' for quick command line calculations using the new
  expression evaluator.
- Deprecated '_query' alias.
- Removed deprecated 'push', 'pull' and 'merge' commands.
- Removed version 1.x column name support.
- Removed version 1.x sort column support.
- Old-style color names including underscores are no longer supported.
- Removed priority counts from the 'projects' report.
- New themes: dark-default-16.theme, dark-gray-blue-256.theme