@@ -139,6 +139,7 @@
 - TW-1341 confirmation config setting should apply to config command as well
           (thanks to Charles Ulrich).
 - TW-1345 taskrc.5 manpage errors.
+- TW-1354 Add value-dependent urgency coefficients for UDAs.
 - TW-1359 "one-two-three" in description triggers Malformed ID error.
 - TW-1360 color.until directive missing.
 - TW-1361 Strange results with complex filter (thanks to Jim B).
